--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
----
----
-/**add dashes to make css into scss*/
+/**---*/
+/**---*/
+/**dashes to make css into scss*/
 /** Reset some basic elements */
 body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure { margin: 0; padding: 0; }
 
